.metadata/.plugins/org.eclipse.cdt.ui/myproject.build.log
18:28:21 **** Build of configuration Debug for project myproject ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/protocol.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/protocol.d" -MT"Core/Src/protocol.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/protocol.o"
../Core/Src/protocol.c:3:1: error: unknown type name 'uint8_t'
    3 | uint8_t statemachine(uint8_t ch)
      | ^~~~~~~
../Core/Src/protocol.c:3:22: error: unknown type name 'uint8_t'
    3 | uint8_t statemachine(uint8_t ch)
      |                      ^~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/protocol.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:28:21 Build Failed. 3 errors, 0 warnings. (took 285ms)

